--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.3
   cloud_firestore: ^5.4.4
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
