--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^12.3.3
   cloud_firestore: ^5.4.4
   photo_view: ^0.15.0
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
