--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   photo_view: ^0.15.0
   video_player: ^2.9.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
